Add Design by Eric Yang

--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
                 <h1>🏢 資料中心 PUE 計算報告</h1>
                 <p class="subtitle">Power Usage Effectiveness Report</p>
                 <p class="meta" id="report-meta"></p>
+                <p class="designer">Design by Eric Yang</p>
             </div>
             <h2>📊 計算結果</h2>
             
@@ -395,6 +396,7 @@
 
         <footer>
             <p>🏢 資料中心 PUE 計算器 | Energy Efficiency Calculator</p>
+            <p class="designer">Design by Eric Yang</p>
         </footer>
     </div>
 
