--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
         <section id="region-section" class="region-section hidden">
             <h2>📍 選擇資料中心所在地區</h2>
             <div class="region-selector">
-                <button type="button" class="region-btn active" data-region="taoyuan" onclick="selectRegion('taoyuan')">
+                <button type="button" class="region-btn active" data-region="newtaipei" onclick="selectRegion('newtaipei')">
+                    🌃 新北
+                </button>
+                <button type="button" class="region-btn" data-region="taoyuan" onclick="selectRegion('taoyuan')">
                     🌆 桃園
                 </button>
                 <button type="button" class="region-btn" data-region="taichung" onclick="selectRegion('taichung')">
@@ -41,9 +44,6 @@
                 </button>
                 <button type="button" class="region-btn" data-region="kaohsiung" onclick="selectRegion('kaohsiung')">
                     🏙️ 高雄
-                </button>
-                <button type="button" class="region-btn" data-region="newtaipei" onclick="selectRegion('newtaipei')">
-                    🌃 新北
                 </button>
             </div>
         </section>
