Add newtaipei weather data

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 <button type="button" class="region-btn" data-region="kaohsiung" onclick="selectRegion('kaohsiung')">
                     🏙️ 高雄
                 </button>
+                <button type="button" class="region-btn" data-region="newtaipei" onclick="selectRegion('newtaipei')">
+                    🏪 新北
+                </button>
             </div>
         </section>
 
