Add all 16 cities weather data (北到南排序)

--- a/index.html
+++ b/index.html
@@ -33,20 +33,53 @@
         <section id="region-section" class="region-section hidden">
             <h2>📍 選擇資料中心所在地區</h2>
             <div class="region-selector">
-                <button type="button" class="region-btn active" data-region="newtaipei" onclick="selectRegion('newtaipei')">
-                    🌃 新北
+                <button type="button" class="region-btn active" data-region="tamsui" onclick="selectRegion('tamsui')">
+                    🏖️ 淡水
+                </button>
+                <button type="button" class="region-btn" data-region="taipei" onclick="selectRegion('taipei')">
+                    🌃 臺北
+                </button>
+                <button type="button" class="region-btn" data-region="keelung" onclick="selectRegion('keelung')">
+                    ⚓ 基隆
+                </button>
+                <button type="button" class="region-btn" data-region="yilan" onclick="selectRegion('yilan')">
+                    🌧️ 宜蘭
+                </button>
+                <button type="button" class="region-btn" data-region="newtaipei" onclick="selectRegion('newtaipei')">
+                    🏪 新北
                 </button>
                 <button type="button" class="region-btn" data-region="taoyuan" onclick="selectRegion('taoyuan')">
                     🌆 桃園
                 </button>
+                <button type="button" class="region-btn" data-region="hsinchu" onclick="selectRegion('hsinchu')">
+                    🏙️ 新竹
+                </button>
+                <button type="button" class="region-btn" data-region="xinwu" onclick="selectRegion('xinwu')">
+                    🌾 新屋
+                </button>
                 <button type="button" class="region-btn" data-region="taichung" onclick="selectRegion('taichung')">
-                    🏛️ 台中
+                    🏛️ 臺中
+                </button>
+                <button type="button" class="region-btn" data-region="chiayi" onclick="selectRegion('chiayi')">
+                    🎋 嘉義
+                </button>
+                <button type="button" class="region-btn" data-region="tainan" onclick="selectRegion('tainan')">
+                    🏯 臺南
                 </button>
                 <button type="button" class="region-btn" data-region="kaohsiung" onclick="selectRegion('kaohsiung')">
                     🏙️ 高雄
                 </button>
-                <button type="button" class="region-btn" data-region="newtaipei" onclick="selectRegion('newtaipei')">
-                    🏪 新北
+                <button type="button" class="region-btn" data-region="hualien" onclick="selectRegion('hualien')">
+                    🌊 花蓮
+                </button>
+                <button type="button" class="region-btn" data-region="taidong" onclick="selectRegion('taidong')">
+                    🌴 臺東
+                </button>
+                <button type="button" class="region-btn" data-region="chenggong" onclick="selectRegion('chenggong')">
+                    🏝️ 成功
+                </button>
+                <button type="button" class="region-btn" data-region="hengchun" onclick="selectRegion('hengchun')">
+                    🏖️ 恆春
                 </button>
             </div>
         </section>
