Fix: all cities have exactly 8760 hours, add 田中 city

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                     <button type="button" class="region-btn active" data-region="taichung" onclick="selectRegion('taichung')">
                         🏛️ 臺中
                     </button>
+                    <button type="button" class="region-btn" data-region="tianzhong" onclick="selectRegion('tianzhong')">
+                        🌾 田中
+                    </button>
                     <button type="button" class="region-btn" data-region="chiayi" onclick="selectRegion('chiayi')">
                         🎋 嘉義
                     </button>
